--- a/application/static/style/catalog.css
+++ b/application/static/style/catalog.css
@@ -1,31 +1,34 @@
 .catalog {
     margin-top: 60px;
-    margin-left: 20%;
+    margin-left: 319px;
     position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
+    width: calc(100% - 330px);
     height: calc(100% - 60px);
     z-index: 101;
     background: #fff;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .side-menu {
     font-size: 1.5em;
     margin-top: 60px;
     padding: 15px;
     position: fixed;
-    width: calc(20% + 16px);
+    width: 330px;
     height: calc(100% - 60px);
     overflow-y: scroll;
     overflow-x: hidden;
     z-index: 100;
 }
-h2 {
-	text-align: center;
-}
 h1, h2, h3 {
 	font-weight: bold;
+	text-align: center;
+    margin-top:15px;
+    margin-bottom:15px;
 }
 hr {
     border-style: inset;
@@ -41,9 +44,10 @@ hr {
     box-shadow: none;
     border-radius: 15px;
 	transition: 0.25s all linear;
+    margin-top: 60px;
+}
 }
 .item:hover {
-    box-shadow: 10px 10px 10px #adadad;
 }
 .item span {
     display: block;
@@ -55,11 +59,11 @@ hr {
 	height:400px;
     border-radius: 15px;
 	transition:  inherit;
+    box-shadow: 10px 10px 10px #adadad;
 }
-.item:hover img {
+.item img:hover {
 	opacity:1;
 }
-
 .item div {
     padding: 15px;
     text-align: center;
@@ -76,7 +80,24 @@ hr {
     text-transform: uppercase;
     width: 120px;
     height: 30px;
-    background: rgb(255, 102, 36);
+    background: #ff6624;
     font-weight: bold;
     color: #fff;
+    width: 100%;
+    transition: 0.2s all linear;
+}
+
+.side-menu span {
+  cursor:pointer;
+  text-align:center;
+  width:100%;
+  display: block;
+}
+.side-menu span:hover {
+  color:  #ff6624
+}
+#apply-filters:hover {
+    border: 1px solid #ff6624;
+    background: #fff;
+    color: #ff6624;
 }
